[package]
name = "canonical-toolchain"
version = "0.1.1"
edition = "2021"
build="build.rs"

[dependencies]
# HAL for the RP350X architecture
rp235x-hal = {version="0.2.0", features = ["binary-info", "critical-section-impl", "rt", "defmt", "rtic-monotonic"], optional = true}
# HAL for the older RP2040
rp2040-hal = {version = "0.10.2", features = ["critical-section-impl", "rt", "defmt", "rtic-monotonic"], optional = true}
# Cortex-M peripherals
cortex-m = "0.7.3"
# Startup/Runtime for Cortex-M microcontrollers
cortex-m-rt = "0.7.3"
# Rust safe bindings to register-level control
embedded-hal = "1.0.0"
# Simple panic handler
panic-halt = "0.2.0"
# RTIC for real-time operations
rtic = {version = "2.1.1"}
rtic-monotonics = {version="2.0.2", path="./rtic/rtic-monotonics"}
# Time
embedded-time = "0.12.1"
fugit = "0.3.7"

# logging
defmt = "0.3"
defmt-rtt = "0.4.0"

# Target features
[features]
default = ["rp2350"]
rp2350 = [
    "dep:rp235x-hal",
    "rtic-monotonics/rp235x",
    "rtic/thumbv8main-backend"
]
rp2040 = [
    "dep:rp2040-hal",
    "rtic-monotonics/rp2040",
    "rtic/thumbv6-backend"
]